--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -7,6 +7,7 @@
   <%= htmlWebpackPlugin.tags.headTags %>
 </head>
 <body>
+  <div id="root"></div>
   <%= htmlWebpackPlugin.tags.bodyTags %>
 </body>
 </html>
